Fixed visualization layout bugs

--- a/website/src/app/shared/components/visualization-page/visualization-page.component.scss
+++ b/website/src/app/shared/components/visualization-page/visualization-page.component.scss
@@ -13,40 +13,55 @@
     align-items: center;
   }
 
-  .title {
-    font-weight: bold;
-    font-size: 1.25rem;
-  }
-  .description {
-    font-size: 1.25rem;
-  }
-
   .content {
-    padding-top: 2rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .center-box {
+      display: block;
+      max-width: 83rem;
+      width: 100%;
+    }
+
+    .title {
+      font-weight: bold;
+      font-size: 1.25rem;
+    }
+
+    .description {
+      font-size: 1.25rem;
+    }
 
     .visualization {
-      display: flex;
-      max-width: 83rem;
-      overflow-x: auto;
-      overflow-y: hidden;
+      position: relative;
+      padding-right: 1.75rem;;
 
-      .help-button {
-        height: 1.5rem;
-        width: 1.5rem;
-        min-width: 1.5rem;
-        font-size: 1rem;
-        background-color: white;
-        text-align: center;
-        vertical-align: middle;
+      .help {
+        position: absolute;
+        top: 0.25rem;
+        right: 0;
+        width: 1.75rem;
+        height: 1.75rem;
+        line-height: 1.75rem;
+        transition: opacity 0.4s ease-in;
+        opacity: 0.3;
+        border-width: 1px;
+        border-style: solid;
         border-radius: 50%;
-        box-shadow: 0 3px 4px rgba(0,0,0,0.4);
-        color: gray;
-        font-weight: bold;
-        padding-top: .2rem;
-        margin-left: 1rem;
-        cursor: pointer;
+        box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+
+        &:hover {
+          opacity: 0.7;
+        }
+
+        .qmark {
+          width: 1.75rem;
+          height: 1.75rem;
+          line-height: 1.75rem;
+          font-size: 1.25rem;
+          vertical-align: baseline;
+        }
       }
     }
 
